--- a/src/components/menu-item/menu-item.css
+++ b/src/components/menu-item/menu-item.css
@@ -1,18 +1,4 @@
-.homepage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-  }
-  
-  .directory-menu {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .menu-item {
+.menu-item {
     min-width: 30%;
     height: 240px;
     flex: 1 1 auto;
@@ -21,14 +7,38 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    overflow: hidden;
+}
+    .menu-item:hover {
+      cursor: pointer;
     }
-
+      .background-image:hover {
+        transform: scale(1.1);
+        transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      }
+  
+      .content:hover {
+        opacity: 0.9;
+      }
+    
+  
+    .large {
+      height: 380px;
+    }
+  
     .menu-item:first-child {
       margin-right: 7.5px;
     }
   
     .menu-item:last-child {
       margin-left: 7.5px;
+    }
+  
+    .background-image {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
     }
   
     .content {
@@ -39,11 +49,13 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
-    }
-  
+      background-color: white;
+      opacity: 0.7;
+      position: absolute;
+      }
       .title {
         font-weight: bold;
-        margin-bottom: 6px;
+        margin: 0 6px 0;
         font-size: 22px;
         color: #4a4a4a;
       }
@@ -52,6 +64,4 @@
         font-weight: lighter;
         font-size: 16px;
       }
-    
-  
   
