--- a/src/components/collection-item/collection-item.css
+++ b/src/components/collection-item/collection-item.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
     }
     .image {
       width: 100%;
@@ -12,7 +13,23 @@
       background-position: center;
       margin-bottom: 5px;
     }
+    .image:hover{
+      opacity: 0.85;
+    }
   
+    .collection-item>.custom-button{
+        
+        width: 80%;
+        opacity: 0;
+        position: absolute;
+        top: 255px;
+        
+
+         }
+         .collection-item:hover >.custom-button{
+        opacity: 0.8
+           }
+    
     .collection-footer {
       width: 100%;
       height: 5%;
