--- a/src/components/custom-button/custom-button.css
+++ b/src/components/custom-button/custom-button.css
@@ -13,6 +13,8 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
     }
     .custom-button:hover {
       background-color: white;
@@ -20,3 +22,16 @@
       border: 1px solid black;
     }
   
+    .inverted{
+      background-color: black;
+      color: white;
+      border: 1px solid black;
+    }
+    
+    .inverted:hover {
+      background-color: white;
+      color: black;
+      border:none
+    }
+
+    
