--- a/src/components/cart-dropdown/cart-dropdown.css
+++ b/src/components/cart-dropdown/cart-dropdown.css
@@ -1,7 +1,7 @@
 .cart-dropdown {
     position: absolute;
-    width: 250px;
-    height: 300px;
+    width: 300px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -15,7 +15,7 @@
       height: 300px;
       display: flex;
       flex-direction: column;
-      overflow: scroll visible visible;
+      overflow: scroll;
     }
   
     button {
