--- a/src/components/collection-item/collection-item.css
+++ b/src/components/collection-item/collection-item.css
@@ -1,5 +1,5 @@
 .collection-item {
-    width: 22%;
+    width: 22vw;
     display: flex;
     flex-direction: column;
     height: 350px;
@@ -36,13 +36,14 @@
       display: flex;
       justify-content: space-between;
       font-size: 18px;
+      
     }
-      .name {
-        width: 90%;
-        margin-bottom: 15px;
-      }
-  
-      .price {
-        width: 10%;
-      }
+    .collection-footer>.name {
+      width: 90%;
+      margin-bottom: 15px;
+    }
+
+    .collection-footer>.price {
+      width: 10%;
+    }
     
