--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+*{
+  
+  background: rgb(245, 241, 241);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
